--- a/plonetheme/onegovbear/locales/de/LC_MESSAGES/plonetheme.onegovbear.po
+++ b/plonetheme/onegovbear/locales/de/LC_MESSAGES/plonetheme.onegovbear.po
@@ -4,7 +4,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2015-08-07 12:27+0000\n"
+"POT-Creation-Date: 2015-08-10 14:14+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -14,26 +14,42 @@ msgstr ""
 "Plural-Forms: nplurals=1; plural=0\n"
 "Preferred-Encodings: utf-8 latin1\n"
 
+#: ./plonetheme/onegovbear/browser/forms.py:179
+msgid "Cancel"
+msgstr "Abbrechen"
+
+#: ./plonetheme/onegovbear/browser/forms.py:176
+msgid "Changes saved"
+msgstr "Änderungen gespeichert"
+
 #: ./plonetheme/onegovbear/profiles/default/actions.xml
 msgid "Customize design"
 msgstr "Design anpassen"
 
+#: ./plonetheme/onegovbear/browser/forms.py:185
+msgid "Edit cancelled"
+msgstr "Bearbeiten abgebrochen"
+
+#: ./plonetheme/onegovbear/browser/forms.py:161
+msgid "Save"
+msgstr "Speichern"
+
 msgid "customize SCSS variables"
 msgstr "SCSS-Variablen anpassen"
 
-#. Default: "The values entered in this form will override the SCSS variables defined in the theme for the INavigationRoot (e.g. Plone Site and Subsites)."
-#: ./plonetheme/onegovbear/browser/forms.py:106
+#. Default: "This form can be used to customize a selection of the design variable defined in this theme."
+#: ./plonetheme/onegovbear/browser/forms.py:133
 msgid "variables_form_description"
-msgstr "Die Werte für die SCSS-Variablen in diesem Formular überschreiben die Variablen des Themes für INavigationRoot (z.B. Plone Site and Subsites)."
+msgstr "Dieses Formular dient dem Anpassen von einigen ausgewählten Design-Variablen des Themes."
 
-#. Default: "Subsites will inherit the variables defined on the Plone Site or an ancestor Subsite."
-#: ./plonetheme/onegovbear/browser/forms.py:115
-msgid "variables_form_description_subsite"
-msgstr "Subsites übernehmen die Werte, die auf der Plone Site oder einer übergeordneten Subsite angepasst wurden."
+#. Default: "Variables will be inherited from the ancestors."
+#: ./plonetheme/onegovbear/browser/forms.py:140
+msgid "variables_form_description_inheritance"
+msgstr "Variablen werden von den übergeordneten Inhalten geerbet, falls sie dort angepasst worden sind."
 
-#. Default: "Custom SCSS variables"
-#: ./plonetheme/onegovbear/browser/forms.py:97
+#. Default: "Custom design variables (SCSS)"
+#: ./plonetheme/onegovbear/browser/forms.py:126
 msgid "variables_form_label"
-msgstr "SCSS-Variablen überschreiben"
+msgstr "Design-Variablen überschreiben (SCSS)"
 
 
