--- a/plonetheme/onegovbear/locales/de/LC_MESSAGES/plonetheme.onegovbear.po
+++ b/plonetheme/onegovbear/locales/de/LC_MESSAGES/plonetheme.onegovbear.po
@@ -4,7 +4,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2015-08-24 15:29+0000\n"
+"POT-Creation-Date: 2015-09-08 06:53+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -202,6 +202,16 @@ msgstr "Die Primärfarbe."
 #: ./plonetheme/onegovbear/browser/forms.py:47
 msgid "label_secondary_color"
 msgstr "Wird für die Hintergrundfarbe der Edit-Leiste, die Farbe der Links im Sprachumschalter und der Links der Servicenavigation verwendet."
+
+#. Default: "Content"
+#: ./plonetheme/onegovbear/viewlets/accesskeys.pt:5
+msgid "label_skiptocontent"
+msgstr "Inhalt"
+
+#. Default: "Navigation"
+#: ./plonetheme/onegovbear/viewlets/accesskeys.pt:10
+msgid "label_skiptonavigation"
+msgstr "Navigation"
 
 #. Default: "This form can be used to customize a selection of the design variable defined in this theme."
 #: ./plonetheme/onegovbear/browser/forms.py:226
