--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,7 +5,8 @@ Changelog
 1.0.0a2 (unreleased)
 --------------------
 
-- Nothing changed yet.
+- Fix mobilenavigation fixed navigation elements
+  [elioschmutz]
 
 
 1.0.0a1 (2015-12-04)
