Add padding for page-wrapper
Add padding for page-wrapper because it does not look good without it.

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,6 +5,9 @@ Changelog
 1.0.0a5 (unreleased)
 --------------------
 
+- Add padding for page-wrapper
+  [elioschmutz]
+
 - Hide pathbar and documentFirstHeading on the front page.
   [mathias.leimgruber]
 
