--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,6 +5,9 @@ Changelog
 1.0.0a5 (unreleased)
 --------------------
 
+- Decrease upper and lower padding of logoRow.
+  [elioschmutz]
+
 - Add padding for page-wrapper
   [elioschmutz]
 
