Add pathbar_full_width to manifest.cfg.
This fixes the init setup of theme.

Problem:
Applying this change by regstry.xml does not work, since the theme import step is triggered
after the registry import step.

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,6 +5,9 @@ Changelog
 1.0.0a5 (unreleased)
 --------------------
 
+- Fix init apply of onegovbear profile. Check commit desc for details.
+  [mathias.leimgruber]
+
 - Apply pagewrapper padding only to header if feature is enabled.
   Remove pagewrapper padding for content area.
   [mathias.leimgruber]
