--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,6 +5,10 @@ Changelog
 1.0.0a5 (unreleased)
 --------------------
 
+- Add a hidden h2 to the logo markup. Without this separation the logo belongs
+  semantically to the service navigation. This confuses users with screenreaders.
+  [mathias.leimgruber]
+
 - Extend menues/mobile scss by header/section tags to support menues without definition lists.
   [mathias.leimgruber]
 
