implement uninstall profile.
- Theme can not be uninstalled, therefore we need to cleanup the
  registry.
- Move CSS conditions to hooks, so that we do not implictly register new
  CSS resources.

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,6 +5,8 @@ Changelog
 1.0.0a5 (unreleased)
 --------------------
 
+- Implement uninstall profile. [jone]
+
 - Add a hidden h2 to the logo markup. Without this separation the logo belongs
   semantically to the service navigation. This confuses users with screenreaders.
   [mathias.leimgruber]
