Remove duplicate accesskey 1 on portal-logo.

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,6 +5,9 @@ Changelog
 1.0.0a5 (unreleased)
 --------------------
 
+- Remove duplicate accesskey 1 on portal-logo.
+  [mathias.leimgruber]
+
 - Add a hidden h2 to the logo markup. Without this separation the logo belongs
   semantically to the service navigation. This confuses users with screenreaders.
   [mathias.leimgruber]
