--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,7 +5,8 @@ Changelog
 1.1.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fix broken simplelayout layouts.
+  [elioschmutz]
 
 
 1.1.1 (2016-04-22)
