--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,7 +5,8 @@ Changelog
 1.1.4 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Add support for googles sitelinks searchbox.
+  [mathias.leimgruber]
 
 
 1.1.3 (2016-04-27)
