Remove horizontal scrollbar in IE.
The bottom actions produce a horizontal scrollbar in IE.
So remove the bottoms actions from the index.html because we do not
display any site-actions anyway.

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,6 +5,9 @@ Changelog
 1.1.4 (unreleased)
 ------------------
 
+- Remove horizontal scrollbar in IE.
+  [Kevin Bieri]
+
 - Improve simplelayout styles (Dragging new layout + Simplelayout Porlet).
   [mathias.leimgruber]
 
