Hide navigation column in tablet view on customer request
Closes https://github.com/4teamwork/bern.web/issues/1149

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,6 +5,9 @@ Changelog
 1.1.4 (unreleased)
 ------------------
 
+- Hide navigation column in tablet view on customer request
+  [Kevin Bieri]
+
 - Use same styling for heading 3 as for strong
   [Kevin Bieri]
 
