Add translation for pathbar for en, it, fr and de

--- a/plonetheme/onegovbear/locales/fr/LC_MESSAGES/plonetheme.onegovbear.po
+++ b/plonetheme/onegovbear/locales/fr/LC_MESSAGES/plonetheme.onegovbear.po
@@ -260,5 +260,5 @@ msgstr ""
 #. Default: "You are here:"
 #: ./plonetheme/onegovbear/viewlets/pathbar.pt:6
 msgid "you_are_here"
-msgstr ""
+msgstr "Vous êtes ici:"
 
