--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,6 +5,9 @@ Changelog
 1.1.4 (unreleased)
 ------------------
 
+- Add translation for pathbar for en, it, fr and de
+  [Kevin Bieri]
+
 - Hide navigation column in tablet view on customer request
   [Kevin Bieri]
 
