Point always to plone root on mobile logo.
bern.web #1125

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,6 +5,9 @@ Changelog
 1.1.4 (unreleased)
 ------------------
 
+- Point to plone root always on mobile logo.
+  [mathias.leimgruber]
+
 - Fix styles for h-tags inside of header tags in portlet row.
   [mathias.leimgruber]
 
