--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,6 +5,9 @@ Changelog
 1.2.1 (unreleased)
 ------------------
 
+- Fix margin bottom of open in overlay indicator (ftw.simplelayout).
+  [mathias.leimgruber]
+
 - Add spinner support for ajax request (ftw.simplelayout).
   [mathias.leimgruber]
 
