--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,7 +5,8 @@ Changelog
 1.2.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Release 1.2.1 is a feature release. 1.2.1 = 1.3.0
+  [raphael-s]
 
 
 1.2.1 (2016-11-07)
