--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,7 +5,8 @@ Changelog
 1.3.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Move buttons of content tree widget so they no longer hide
+  the last item. [mbaechtold]
 
 
 1.3.1 (2016-11-09)
