--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,7 +5,8 @@ Changelog
 1.3.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fix label of form field used to set the footer background
+  color. [mbaechtold]
 
 
 1.3.2 (2017-04-11)
