Hide the additional logo if the class ".hide" is present.
This applies to mobile screens only. The class may be set through JavaScript in the policy.

Partially closes https://github.com/4teamwork/bern.web/issues/1209

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,6 +5,9 @@ Changelog
 1.3.3 (unreleased)
 ------------------
 
+- Hide the additional logo if the class ".hide" is present (only for mobile
+  screens). [mbaechtold]
+
 - Fix label of form field used to set the footer background
   color. [mbaechtold]
 
