--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,6 +5,9 @@ Changelog
 1.3.3 (unreleased)
 ------------------
 
+- Add dependency for ftw.subsite because the pathbar viewlet doesn't work
+  without this package installed. [raphael-s]
+
 - Hide the additional logo if the class ".hide" is present (only for mobile
   screens). [mbaechtold]
 
