--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,6 +5,8 @@ Changelog
 1.3.4 (unreleased)
 ------------------
 
+- Remove superfluous margin of textblock. [mbaechtold]
+
 - Enable selection of navigation access key. [mbaechtold]
 
 
