--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,7 +5,7 @@ Changelog
 1.3.4 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Enable selection of navigation access key. [mbaechtold]
 
 
 1.3.3 (2017-06-02)
