--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -7,6 +7,8 @@ Changelog
 
 - Remove superfluous margin of textblock. [mbaechtold]
 
+- Remove min-height on sl-column. the simplelayout.scss already does this for us. [mathias.leimgruber]
+
 - Enable selection of navigation access key. [mbaechtold]
 
 
