--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -2,6 +2,12 @@ Changelog
 =========
 
 
+1.3.5 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 1.3.4 (2017-09-11)
 ------------------
 
