--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,7 +5,7 @@ Changelog
 1.3.5 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Support new SL async layouts. [mathias.leimgruber]
 
 
 1.3.4 (2017-09-11)
